--- a/Korki/Pages/Shared/_LoginPartial.cshtml
+++ b/Korki/Pages/Shared/_LoginPartial.cshtml
@@ -6,21 +6,21 @@
 @if (SignInManager.IsSignedIn(User))
 {
     <li>
-        <a  class="nav_link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity.Name!</a>
+        <a  class="nav_link" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Profil @User.Identity.Name</a>
     </li>
     <li>
         <form class="form-inline" asp-area="Identity" asp-page="/Account/Logout" asp-route-returnUrl="@Url.Page("/", new { area = "" })" method="post" >
-            <button  type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+            <button  type="submit" class="nav-link btn btn-link text-dark">Wyloguj</button>
         </form>
     </li>
 }
 else
 {
     <li>
-        <a class="nav_link" asp-area="Identity" asp-page="/Account/Register">Register</a>
+        <a class="nav_link" asp-area="Identity" asp-page="/Account/Register">Zarejestruj</a>
     </li>
     <li>
-        <a class="nav_link" asp-area="Identity" asp-page="/Account/Login">Login</a>
+        <a class="nav_link" asp-area="Identity" asp-page="/Account/Login">Zaloguj</a>
     </li>
 }
 </ul>
