--- a/Korki/Pages/Index.cshtml
+++ b/Korki/Pages/Index.cshtml
@@ -1,7 +1,8 @@
 ﻿@page
 @using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Korki.Models
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 @model IndexModel
 @{
