--- a/Korki/Pages/Shared/_LoginPartial.cshtml
+++ b/Korki/Pages/Shared/_LoginPartial.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@using Korki.Models
+@inject SignInManager<User> SignInManager
+@inject UserManager<User> UserManager
 
 <ul class="nav_list">
 @if (SignInManager.IsSignedIn(User))
