Fix Identity bugs, add pages for login etc with styles

--- a/Korki/Areas/Identity/Pages/Account/ForgotPassword.cshtml
+++ b/Korki/Areas/Identity/Pages/Account/ForgotPassword.cshtml
@@ -1,24 +1,23 @@
 ﻿@page
 @model ForgotPasswordModel
 @{
-    ViewData["Title"] = "Forgot your password?";
+    ViewData["Title"] = "Zapomniane hasło";
+}
+@section Styles{
+    <link rel="stylesheet" href="~/css/standard_form.css" />
 }
 
-<h1>@ViewData["Title"]</h1>
-<h4>Enter your email.</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form method="post">
-            <div asp-validation-summary="All" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
-            </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
+<div class="st_form_wrapper_1col">
+    <form class="st_form" method="post">
+        <p class="st_form_title">Wpisz email związany z kontem</p>
+        <div class="st_form_box">
+            <label asp-for="Input.Email"></label>
+            <input asp-for="Input.Email" />
+            <span asp-validation-for="Input.Email" class="st_form_notice"></span>
+        </div>
+        <div asp-validation-summary="All" class="st_form_summary"></div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
 </div>
 
 @section Scripts {
