--- a/Korki/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
+++ b/Korki/Areas/Identity/Pages/Account/ForgotPasswordConfirmation.cshtml
@@ -1,11 +1,11 @@
 ﻿@page
 @model ForgotPasswordConfirmation
 @{
-    ViewData["Title"] = "Forgot password confirmation";
+    ViewData["Title"] = "Zapomniane hasło";
 }
 
-<h1>@ViewData["Title"]</h1>
-<p>
-    Please check your email to reset your password.
-</p>
-
+<div class="st_form_wrapper_1col">
+    <div class="st_form">
+        <p class="st_form_title">Email został wysłany.</p>
+    </div>
+</div>
