--- a/Korki/wwwroot/css/tutor_offer.css
+++ b/Korki/wwwroot/css/tutor_offer.css
@@ -8,20 +8,31 @@
     font-size:16px;
     text-align:justify;
     text-align-last:left;
+    min-width:40%;
+    min-height:160px;
+    margin-right:2%;
 }
 
-.tutor_info_box{
-    min-width:40%;
+.tutor_info_box {
+    min-width: 40%;
+    margin-left: 2%;
+    min-height: 160px;
 }
 
 .tutor_timetable{
     width:100%;
 }
 
+.rating_widget_wrapper{
 
+}
 
+.rating_widget{
 
+}
 
 .rating_button{
-
+    width:22px;
+    height:22px;
+    margin-right:2px;
 }
